# rust-yew-todo

./: Cargo.toml  README.md  Trunk.toml  index-425d7766c8dfc8f0.css  index-e572d2d105eac3ad.js  index-e572d2d105eac3ad_bg.wasm  index-fbb8465d20518b67.js  index-fbb8465d20518b67_bg.wasm  index-ff4bd82b8b2cec9f.css  index.html
.github/workflows/: build-deploy.yml
src/: main.rs
src/components/: mod.rs  todo_app.rs  todo_entry.rs
src/styles/: _colors.sass  index.sass
src/styles/components/: _app.sass  _container.sass  _todo-entry.sass
src/styles/site/: _controls.sass  _site.sass  index.sass
