[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew" }
yew-functional = { git = "https://github.com/yewstack/yew" }
wasm-logger = "0.1"
log = "0.4"
